cluster-services/trino/base/trino.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "trino-heraeus-prod-ing"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: "trino-prod.heraeus.coacapp.de"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trino-coac-coordinator
                port:
                  number: 8443

  tls:
    - hosts:
        - "trino-prod.heraeus.coacapp.de"
      secretName: trino-heraeus-prod-tls
